--- a/web/src/components/dashboard/styles.css
+++ b/web/src/components/dashboard/styles.css
@@ -6,7 +6,7 @@
 }
 
 .input__box {
-  width: 100%;
+  width: 20%;
   border-radius: 50px;
   padding: 20px 30px;
   font-size: 25px;
@@ -56,25 +56,12 @@
   border-radius: 5px;
   display: flex;
   flex-direction: column;
-  width: 47.5%;
-  padding: 15px;
-  background-color: rgb(50, 195, 205);
-}
-
-.dragactive {
-  background-color: rgb(0, 221, 236);
-}
-
-.dragcomplete {
-  background-color: rgb(255, 38, 0);
-}
-
-.remove {
-  background-color: rgb(235, 103, 80);
+  width: 90.5%;
+  /* padding: 15px; */
 }
 
 .todos__heading {
-  font-size: 30px;
+  font-size: 26px;
   /* text-align: center; */
   color: white;
 }
@@ -82,8 +69,8 @@
 .todos__single {
   display: flex;
   border-radius: 5px;
-  padding: 5px;
-  margin-top: 5px;
+  padding: 20px;
+  margin-top: 15px;
   background-image: url("https://img.freepik.com/free-photo/crumpled-yellow-paper-background-close-up_60487-2390.jpg?size=626&ext=jpg");
   transition: 0.2s;
 }
